package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_library", "go_prefix")

go_prefix("k8s.io/kops")

gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
    prefix = "k8s.io/kops",
)

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "version.go",
    ],
    importpath = "k8s.io/kops",
)
