# gazelle:prefix k8s.io/kops
# gazelle:proto disable_global

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:proto disable_global

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "version.go",
    ],
    importpath = "k8s.io/kops",
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//channels:all-srcs",
        "//cloudmock/aws/mockautoscaling:all-srcs",
        "//cloudmock/aws/mockec2:all-srcs",
        "//cloudmock/aws/mockelb:all-srcs",
        "//cloudmock/aws/mockelbv2:all-srcs",
        "//cloudmock/aws/mockiam:all-srcs",
        "//cloudmock/aws/mockroute53:all-srcs",
        "//cmd/kops:all-srcs",
        "//cmd/kops-controller:all-srcs",
        "//cmd/nodeup:all-srcs",
        "//dns-controller/cmd/dns-controller:all-srcs",
        "//dns-controller/pkg/dns:all-srcs",
        "//dns-controller/pkg/util:all-srcs",
        "//dns-controller/pkg/watchers:all-srcs",
        "//dnsprovider/pkg/dnsprovider:all-srcs",
        "//examples/kops-api-example:all-srcs",
        "//hack:all-srcs",
        "//images:all-srcs",
        "//kube-discovery/cmd/kube-discovery:all-srcs",
        "//kube-discovery/images:all-srcs",
        "//node-authorizer/cmd/node-authorizer:all-srcs",
        "//node-authorizer/images:all-srcs",
        "//node-authorizer/pkg/authorizers/alwaysallow:all-srcs",
        "//node-authorizer/pkg/authorizers/aws:all-srcs",
        "//node-authorizer/pkg/client:all-srcs",
        "//node-authorizer/pkg/server:all-srcs",
        "//node-authorizer/pkg/utils:all-srcs",
        "//nodeup/pkg/bootstrap:all-srcs",
        "//nodeup/pkg/distros:all-srcs",
        "//nodeup/pkg/model:all-srcs",
        "//pkg/acls:all-srcs",
        "//pkg/apis/kops:all-srcs",
        "//pkg/apis/nodeup:all-srcs",
        "//pkg/assets:all-srcs",
        "//pkg/backoff:all-srcs",
        "//pkg/bundle:all-srcs",
        "//pkg/client/clientset_generated/clientset:all-srcs",
        "//pkg/client/clientset_generated/internalclientset:all-srcs",
        "//pkg/client/simple:all-srcs",
        "//pkg/cloudinstances:all-srcs",
        "//pkg/commands:all-srcs",
        "//pkg/diff:all-srcs",
        "//pkg/dns:all-srcs",
        "//pkg/drain:all-srcs",
        "//pkg/edit:all-srcs",
        "//pkg/featureflag:all-srcs",
        "//pkg/flagbuilder:all-srcs",
        "//pkg/formatter:all-srcs",
        "//pkg/instancegroups:all-srcs",
        "//pkg/jsonutils:all-srcs",
        "//pkg/k8scodecs:all-srcs",
        "//pkg/k8sversion:all-srcs",
        "//pkg/kopscodecs:all-srcs",
        "//pkg/kubeconfig:all-srcs",
        "//pkg/kubemanifest:all-srcs",
        "//pkg/model:all-srcs",
        "//pkg/nodeidentity:all-srcs",
        "//pkg/nodelabels:all-srcs",
        "//pkg/pki:all-srcs",
        "//pkg/pkiutil:all-srcs",
        "//pkg/pretty:all-srcs",
        "//pkg/rbac:all-srcs",
        "//pkg/resources:all-srcs",
        "//pkg/sshcredentials:all-srcs",
        "//pkg/systemd:all-srcs",
        "//pkg/templates:all-srcs",
        "//pkg/testutils:all-srcs",
        "//pkg/tokens:all-srcs",
        "//pkg/try:all-srcs",
        "//pkg/urls:all-srcs",
        "//pkg/util/stringorslice:all-srcs",
        "//pkg/util/subnet:all-srcs",
        "//pkg/util/templater:all-srcs",
        "//pkg/validation:all-srcs",
        "//pkg/values:all-srcs",
        "//protokube/cmd/protokube:all-srcs",
        "//protokube/pkg/etcd:all-srcs",
        "//protokube/pkg/gossip:all-srcs",
        "//protokube/pkg/protokube:all-srcs",
        "//protokube/tests/integration/build_etcd_manifest:all-srcs",
        "//tests:all-srcs",
        "//tools:all-srcs",
        "//upup/models:all-srcs",
        "//upup/pkg/fi:all-srcs",
        "//upup/pkg/kutil:all-srcs",
        "//upup/tools/generators/fitask:all-srcs",
        "//upup/tools/generators/pkg/codegen:all-srcs",
        "//util/pkg/env:all-srcs",
        "//util/pkg/exec:all-srcs",
        "//util/pkg/hashing:all-srcs",
        "//util/pkg/maps:all-srcs",
        "//util/pkg/proxy:all-srcs",
        "//util/pkg/reflectutils:all-srcs",
        "//util/pkg/slice:all-srcs",
        "//util/pkg/tables:all-srcs",
        "//util/pkg/text:all-srcs",
        "//util/pkg/ui:all-srcs",
        "//util/pkg/vfs:all-srcs",
        "//vendor/cloud.google.com/go/compute/metadata:all-srcs",
        "//vendor/github.com/Azure/go-ansiterm:all-srcs",
        "//vendor/github.com/Azure/go-autorest/autorest:all-srcs",
        "//vendor/github.com/Azure/go-autorest/logger:all-srcs",
        "//vendor/github.com/Azure/go-autorest/version:all-srcs",
        "//vendor/github.com/BurntSushi/toml:all-srcs",
        "//vendor/github.com/GoogleCloudPlatform/k8s-cloud-provider/pkg/cloud:all-srcs",
        "//vendor/github.com/MakeNowJust/heredoc:all-srcs",
        "//vendor/github.com/Masterminds/semver:all-srcs",
        "//vendor/github.com/Masterminds/sprig:all-srcs",
        "//vendor/github.com/Microsoft/go-winio:all-srcs",
        "//vendor/github.com/PuerkitoBio/purell:all-srcs",
        "//vendor/github.com/PuerkitoBio/urlesc:all-srcs",
        "//vendor/github.com/aokoli/goutils:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/aws:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/internal/ini:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/internal/s3err:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/internal/sdkio:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/internal/sdkrand:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/internal/sdkuri:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/internal/shareddefaults:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/private/protocol:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/autoscaling:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/cloudformation:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/ec2:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/elb:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/elbv2:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/iam:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/kms:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/pricing:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/route53:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/s3:all-srcs",
        "//vendor/github.com/aws/aws-sdk-go/service/sts:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/cmd/gazelle:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/config:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/flag:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/internal/version:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/internal/wspace:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/label:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/language:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/merger:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/pathtools:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/repo:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/resolve:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/rule:all-srcs",
        "//vendor/github.com/bazelbuild/bazel-gazelle/walk:all-srcs",
        "//vendor/github.com/bazelbuild/buildtools/build:all-srcs",
        "//vendor/github.com/bazelbuild/buildtools/tables:all-srcs",
        "//vendor/github.com/beorn7/perks/quantile:all-srcs",
        "//vendor/github.com/blang/semver:all-srcs",
        "//vendor/github.com/chai2010/gettext-go/gettext:all-srcs",
        "//vendor/github.com/client9/misspell:all-srcs",
        "//vendor/github.com/coreos/etcd/client:all-srcs",
        "//vendor/github.com/coreos/etcd/pkg/pathutil:all-srcs",
        "//vendor/github.com/coreos/etcd/pkg/srv:all-srcs",
        "//vendor/github.com/coreos/etcd/pkg/types:all-srcs",
        "//vendor/github.com/coreos/etcd/version:all-srcs",
        "//vendor/github.com/coreos/go-semver/semver:all-srcs",
        "//vendor/github.com/cpuguy83/go-md2man/md2man:all-srcs",
        "//vendor/github.com/davecgh/go-spew/spew:all-srcs",
        "//vendor/github.com/denverdino/aliyungo/common:all-srcs",
        "//vendor/github.com/denverdino/aliyungo/ecs:all-srcs",
        "//vendor/github.com/denverdino/aliyungo/ess:all-srcs",
        "//vendor/github.com/denverdino/aliyungo/metadata:all-srcs",
        "//vendor/github.com/denverdino/aliyungo/oss:all-srcs",
        "//vendor/github.com/denverdino/aliyungo/ram:all-srcs",
        "//vendor/github.com/denverdino/aliyungo/slb:all-srcs",
        "//vendor/github.com/denverdino/aliyungo/util:all-srcs",
        "//vendor/github.com/dgrijalva/jwt-go:all-srcs",
        "//vendor/github.com/digitalocean/godo:all-srcs",
        "//vendor/github.com/docker/distribution/digestset:all-srcs",
        "//vendor/github.com/docker/distribution/reference:all-srcs",
        "//vendor/github.com/docker/docker/pkg/term:all-srcs",
        "//vendor/github.com/docker/engine-api/client:all-srcs",
        "//vendor/github.com/docker/engine-api/types:all-srcs",
        "//vendor/github.com/docker/go-connections/nat:all-srcs",
        "//vendor/github.com/docker/go-connections/sockets:all-srcs",
        "//vendor/github.com/docker/go-connections/tlsconfig:all-srcs",
        "//vendor/github.com/docker/go-units:all-srcs",
        "//vendor/github.com/docker/spdystream:all-srcs",
        "//vendor/github.com/emicklei/go-restful:all-srcs",
        "//vendor/github.com/evanphx/json-patch:all-srcs",
        "//vendor/github.com/exponent-io/jsonpath:all-srcs",
        "//vendor/github.com/fatih/camelcase:all-srcs",
        "//vendor/github.com/fatih/color:all-srcs",
        "//vendor/github.com/fsnotify/fsnotify:all-srcs",
        "//vendor/github.com/fullsailor/pkcs7:all-srcs",
        "//vendor/github.com/ghodss/yaml:all-srcs",
        "//vendor/github.com/go-ini/ini:all-srcs",
        "//vendor/github.com/go-logr/logr:all-srcs",
        "//vendor/github.com/go-openapi/jsonpointer:all-srcs",
        "//vendor/github.com/go-openapi/jsonreference:all-srcs",
        "//vendor/github.com/go-openapi/spec:all-srcs",
        "//vendor/github.com/go-openapi/swag:all-srcs",
        "//vendor/github.com/gobuffalo/flect:all-srcs",
        "//vendor/github.com/gogo/protobuf/gogoproto:all-srcs",
        "//vendor/github.com/gogo/protobuf/proto:all-srcs",
        "//vendor/github.com/gogo/protobuf/protoc-gen-gogo/descriptor:all-srcs",
        "//vendor/github.com/gogo/protobuf/sortkeys:all-srcs",
        "//vendor/github.com/golang/groupcache/lru:all-srcs",
        "//vendor/github.com/golang/protobuf/proto:all-srcs",
        "//vendor/github.com/golang/protobuf/ptypes:all-srcs",
        "//vendor/github.com/google/btree:all-srcs",
        "//vendor/github.com/google/go-cmp/cmp:all-srcs",
        "//vendor/github.com/google/go-querystring/query:all-srcs",
        "//vendor/github.com/google/gofuzz:all-srcs",
        "//vendor/github.com/google/uuid:all-srcs",
        "//vendor/github.com/googleapis/gnostic/OpenAPIv2:all-srcs",
        "//vendor/github.com/googleapis/gnostic/compiler:all-srcs",
        "//vendor/github.com/googleapis/gnostic/extensions:all-srcs",
        "//vendor/github.com/gophercloud/gophercloud:all-srcs",
        "//vendor/github.com/gorilla/mux:all-srcs",
        "//vendor/github.com/gregjones/httpcache:all-srcs",
        "//vendor/github.com/hashicorp/golang-lru:all-srcs",
        "//vendor/github.com/hashicorp/hcl:all-srcs",
        "//vendor/github.com/huandu/xstrings:all-srcs",
        "//vendor/github.com/imdario/mergo:all-srcs",
        "//vendor/github.com/inconshreveable/mousetrap:all-srcs",
        "//vendor/github.com/jmespath/go-jmespath:all-srcs",
        "//vendor/github.com/jpillora/backoff:all-srcs",
        "//vendor/github.com/json-iterator/go:all-srcs",
        "//vendor/github.com/jteeuwen/go-bindata:all-srcs",
        "//vendor/github.com/konsorten/go-windows-terminal-sequences:all-srcs",
        "//vendor/github.com/kr/fs:all-srcs",
        "//vendor/github.com/magiconair/properties:all-srcs",
        "//vendor/github.com/mailru/easyjson/buffer:all-srcs",
        "//vendor/github.com/mailru/easyjson/jlexer:all-srcs",
        "//vendor/github.com/mailru/easyjson/jwriter:all-srcs",
        "//vendor/github.com/mattn/go-colorable:all-srcs",
        "//vendor/github.com/mattn/go-isatty:all-srcs",
        "//vendor/github.com/matttproud/golang_protobuf_extensions/pbutil:all-srcs",
        "//vendor/github.com/miekg/coredns/middleware/etcd/msg:all-srcs",
        "//vendor/github.com/miekg/dns:all-srcs",
        "//vendor/github.com/mitchellh/go-wordwrap:all-srcs",
        "//vendor/github.com/mitchellh/mapstructure:all-srcs",
        "//vendor/github.com/modern-go/concurrent:all-srcs",
        "//vendor/github.com/modern-go/reflect2:all-srcs",
        "//vendor/github.com/opencontainers/go-digest:all-srcs",
        "//vendor/github.com/pborman/uuid:all-srcs",
        "//vendor/github.com/pelletier/go-toml:all-srcs",
        "//vendor/github.com/peterbourgon/diskv:all-srcs",
        "//vendor/github.com/pkg/errors:all-srcs",
        "//vendor/github.com/pkg/sftp:all-srcs",
        "//vendor/github.com/pmezard/go-difflib/difflib:all-srcs",
        "//vendor/github.com/prometheus/client_golang/prometheus:all-srcs",
        "//vendor/github.com/prometheus/client_model/go:all-srcs",
        "//vendor/github.com/prometheus/common/expfmt:all-srcs",
        "//vendor/github.com/prometheus/common/internal/bitbucket.org/ww/goautoneg:all-srcs",
        "//vendor/github.com/prometheus/common/model:all-srcs",
        "//vendor/github.com/prometheus/procfs:all-srcs",
        "//vendor/github.com/russross/blackfriday:all-srcs",
        "//vendor/github.com/sergi/go-diff/diffmatchpatch:all-srcs",
        "//vendor/github.com/sirupsen/logrus:all-srcs",
        "//vendor/github.com/spf13/afero:all-srcs",
        "//vendor/github.com/spf13/cast:all-srcs",
        "//vendor/github.com/spf13/cobra:all-srcs",
        "//vendor/github.com/spf13/jwalterweatherman:all-srcs",
        "//vendor/github.com/spf13/pflag:all-srcs",
        "//vendor/github.com/spf13/viper:all-srcs",
        "//vendor/github.com/spotinst/spotinst-sdk-go/service/elastigroup:all-srcs",
        "//vendor/github.com/spotinst/spotinst-sdk-go/service/ocean:all-srcs",
        "//vendor/github.com/spotinst/spotinst-sdk-go/spotinst:all-srcs",
        "//vendor/github.com/stretchr/testify/assert:all-srcs",
        "//vendor/github.com/urfave/cli:all-srcs",
        "//vendor/github.com/vmware/govmomi:all-srcs",
        "//vendor/github.com/weaveworks/mesh:all-srcs",
        "//vendor/go.uber.org/atomic:all-srcs",
        "//vendor/go.uber.org/multierr:all-srcs",
        "//vendor/go.uber.org/zap:all-srcs",
        "//vendor/golang.org/x/crypto/curve25519:all-srcs",
        "//vendor/golang.org/x/crypto/ed25519:all-srcs",
        "//vendor/golang.org/x/crypto/internal/chacha20:all-srcs",
        "//vendor/golang.org/x/crypto/internal/subtle:all-srcs",
        "//vendor/golang.org/x/crypto/nacl/box:all-srcs",
        "//vendor/golang.org/x/crypto/nacl/secretbox:all-srcs",
        "//vendor/golang.org/x/crypto/pbkdf2:all-srcs",
        "//vendor/golang.org/x/crypto/poly1305:all-srcs",
        "//vendor/golang.org/x/crypto/salsa20/salsa:all-srcs",
        "//vendor/golang.org/x/crypto/scrypt:all-srcs",
        "//vendor/golang.org/x/crypto/ssh:all-srcs",
        "//vendor/golang.org/x/net/context:all-srcs",
        "//vendor/golang.org/x/net/http/httpguts:all-srcs",
        "//vendor/golang.org/x/net/http2:all-srcs",
        "//vendor/golang.org/x/net/idna:all-srcs",
        "//vendor/golang.org/x/net/internal/socks:all-srcs",
        "//vendor/golang.org/x/net/proxy:all-srcs",
        "//vendor/golang.org/x/oauth2:all-srcs",
        "//vendor/golang.org/x/sys/cpu:all-srcs",
        "//vendor/golang.org/x/sys/unix:all-srcs",
        "//vendor/golang.org/x/sys/windows:all-srcs",
        "//vendor/golang.org/x/text/encoding:all-srcs",
        "//vendor/golang.org/x/text/internal/utf8internal:all-srcs",
        "//vendor/golang.org/x/text/runes:all-srcs",
        "//vendor/golang.org/x/text/secure/bidirule:all-srcs",
        "//vendor/golang.org/x/text/transform:all-srcs",
        "//vendor/golang.org/x/text/unicode/bidi:all-srcs",
        "//vendor/golang.org/x/text/unicode/norm:all-srcs",
        "//vendor/golang.org/x/text/width:all-srcs",
        "//vendor/golang.org/x/time/rate:all-srcs",
        "//vendor/golang.org/x/tools/go/analysis:all-srcs",
        "//vendor/golang.org/x/tools/go/ast/astutil:all-srcs",
        "//vendor/golang.org/x/tools/go/ast/inspector:all-srcs",
        "//vendor/golang.org/x/tools/go/buildutil:all-srcs",
        "//vendor/golang.org/x/tools/go/gcexportdata:all-srcs",
        "//vendor/golang.org/x/tools/go/internal/gcimporter:all-srcs",
        "//vendor/golang.org/x/tools/go/internal/packagesdriver:all-srcs",
        "//vendor/golang.org/x/tools/go/packages:all-srcs",
        "//vendor/golang.org/x/tools/go/types/objectpath:all-srcs",
        "//vendor/golang.org/x/tools/go/types/typeutil:all-srcs",
        "//vendor/golang.org/x/tools/go/vcs:all-srcs",
        "//vendor/golang.org/x/tools/internal/fastwalk:all-srcs",
        "//vendor/golang.org/x/tools/internal/gopathwalk:all-srcs",
        "//vendor/golang.org/x/tools/internal/semver:all-srcs",
        "//vendor/gomodules.xyz/jsonpatch/v2:all-srcs",
        "//vendor/google.golang.org/api/compute/v0.alpha:all-srcs",
        "//vendor/google.golang.org/api/compute/v0.beta:all-srcs",
        "//vendor/google.golang.org/api/compute/v1:all-srcs",
        "//vendor/google.golang.org/api/container/v1:all-srcs",
        "//vendor/google.golang.org/api/dns/v1:all-srcs",
        "//vendor/google.golang.org/api/gensupport:all-srcs",
        "//vendor/google.golang.org/api/googleapi:all-srcs",
        "//vendor/google.golang.org/api/iam/v1:all-srcs",
        "//vendor/google.golang.org/api/oauth2/v2:all-srcs",
        "//vendor/google.golang.org/api/storage/v1:all-srcs",
        "//vendor/google.golang.org/api/tpu/v1:all-srcs",
        "//vendor/google.golang.org/appengine:all-srcs",
        "//vendor/gopkg.in/fsnotify.v1:all-srcs",
        "//vendor/gopkg.in/gcfg.v1:all-srcs",
        "//vendor/gopkg.in/inf.v0:all-srcs",
        "//vendor/gopkg.in/warnings.v0:all-srcs",
        "//vendor/gopkg.in/yaml.v2:all-srcs",
        "//vendor/gopkg.in/yaml.v3:all-srcs",
        "//vendor/honnef.co/go/tools/arg:all-srcs",
        "//vendor/honnef.co/go/tools/cmd/staticcheck:all-srcs",
        "//vendor/honnef.co/go/tools/config:all-srcs",
        "//vendor/honnef.co/go/tools/deprecated:all-srcs",
        "//vendor/honnef.co/go/tools/facts:all-srcs",
        "//vendor/honnef.co/go/tools/functions:all-srcs",
        "//vendor/honnef.co/go/tools/go/types/typeutil:all-srcs",
        "//vendor/honnef.co/go/tools/internal/cache:all-srcs",
        "//vendor/honnef.co/go/tools/internal/passes/buildssa:all-srcs",
        "//vendor/honnef.co/go/tools/internal/renameio:all-srcs",
        "//vendor/honnef.co/go/tools/internal/sharedcheck:all-srcs",
        "//vendor/honnef.co/go/tools/lint:all-srcs",
        "//vendor/honnef.co/go/tools/loader:all-srcs",
        "//vendor/honnef.co/go/tools/printf:all-srcs",
        "//vendor/honnef.co/go/tools/simple:all-srcs",
        "//vendor/honnef.co/go/tools/ssa:all-srcs",
        "//vendor/honnef.co/go/tools/ssautil:all-srcs",
        "//vendor/honnef.co/go/tools/staticcheck:all-srcs",
        "//vendor/honnef.co/go/tools/stylecheck:all-srcs",
        "//vendor/honnef.co/go/tools/unused:all-srcs",
        "//vendor/honnef.co/go/tools/version:all-srcs",
        "//vendor/k8s.io/api/admission/v1beta1:all-srcs",
        "//vendor/k8s.io/api/admissionregistration/v1beta1:all-srcs",
        "//vendor/k8s.io/api/apps/v1:all-srcs",
        "//vendor/k8s.io/api/apps/v1beta1:all-srcs",
        "//vendor/k8s.io/api/apps/v1beta2:all-srcs",
        "//vendor/k8s.io/api/auditregistration/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/authentication/v1:all-srcs",
        "//vendor/k8s.io/api/authentication/v1beta1:all-srcs",
        "//vendor/k8s.io/api/authorization/v1:all-srcs",
        "//vendor/k8s.io/api/authorization/v1beta1:all-srcs",
        "//vendor/k8s.io/api/autoscaling/v1:all-srcs",
        "//vendor/k8s.io/api/autoscaling/v2beta1:all-srcs",
        "//vendor/k8s.io/api/autoscaling/v2beta2:all-srcs",
        "//vendor/k8s.io/api/batch/v1:all-srcs",
        "//vendor/k8s.io/api/batch/v1beta1:all-srcs",
        "//vendor/k8s.io/api/batch/v2alpha1:all-srcs",
        "//vendor/k8s.io/api/certificates/v1beta1:all-srcs",
        "//vendor/k8s.io/api/coordination/v1:all-srcs",
        "//vendor/k8s.io/api/coordination/v1beta1:all-srcs",
        "//vendor/k8s.io/api/core/v1:all-srcs",
        "//vendor/k8s.io/api/events/v1beta1:all-srcs",
        "//vendor/k8s.io/api/extensions/v1beta1:all-srcs",
        "//vendor/k8s.io/api/imagepolicy/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/networking/v1:all-srcs",
        "//vendor/k8s.io/api/networking/v1beta1:all-srcs",
        "//vendor/k8s.io/api/node/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/node/v1beta1:all-srcs",
        "//vendor/k8s.io/api/policy/v1beta1:all-srcs",
        "//vendor/k8s.io/api/rbac/v1:all-srcs",
        "//vendor/k8s.io/api/rbac/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/rbac/v1beta1:all-srcs",
        "//vendor/k8s.io/api/scheduling/v1:all-srcs",
        "//vendor/k8s.io/api/scheduling/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/scheduling/v1beta1:all-srcs",
        "//vendor/k8s.io/api/settings/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/storage/v1:all-srcs",
        "//vendor/k8s.io/api/storage/v1alpha1:all-srcs",
        "//vendor/k8s.io/api/storage/v1beta1:all-srcs",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/api/equality:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/api/meta:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/api/validation:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/internalversion:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1beta1:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/conversion:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/fields:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/labels:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/runtime:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/selection:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/types:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/cache:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/diff:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/duration:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/errors:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/framer:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/httpstream:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/json:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/mergepatch:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/naming:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/net:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/remotecommand:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/sets:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/strategicpatch:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/uuid:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/validation:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/version:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/util/yaml:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/version:all-srcs",
        "//vendor/k8s.io/apimachinery/pkg/watch:all-srcs",
        "//vendor/k8s.io/apimachinery/third_party/forked/golang/json:all-srcs",
        "//vendor/k8s.io/apimachinery/third_party/forked/golang/netutil:all-srcs",
        "//vendor/k8s.io/apimachinery/third_party/forked/golang/reflect:all-srcs",
        "//vendor/k8s.io/cli-runtime/pkg/genericclioptions:all-srcs",
        "//vendor/k8s.io/cli-runtime/pkg/kustomize:all-srcs",
        "//vendor/k8s.io/cli-runtime/pkg/printers:all-srcs",
        "//vendor/k8s.io/cli-runtime/pkg/resource:all-srcs",
        "//vendor/k8s.io/client-go/discovery:all-srcs",
        "//vendor/k8s.io/client-go/dynamic:all-srcs",
        "//vendor/k8s.io/client-go/informers:all-srcs",
        "//vendor/k8s.io/client-go/kubernetes:all-srcs",
        "//vendor/k8s.io/client-go/listers/admissionregistration/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/apps/v1:all-srcs",
        "//vendor/k8s.io/client-go/listers/apps/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/apps/v1beta2:all-srcs",
        "//vendor/k8s.io/client-go/listers/auditregistration/v1alpha1:all-srcs",
        "//vendor/k8s.io/client-go/listers/autoscaling/v1:all-srcs",
        "//vendor/k8s.io/client-go/listers/autoscaling/v2beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/autoscaling/v2beta2:all-srcs",
        "//vendor/k8s.io/client-go/listers/batch/v1:all-srcs",
        "//vendor/k8s.io/client-go/listers/batch/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/batch/v2alpha1:all-srcs",
        "//vendor/k8s.io/client-go/listers/certificates/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/coordination/v1:all-srcs",
        "//vendor/k8s.io/client-go/listers/coordination/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/core/v1:all-srcs",
        "//vendor/k8s.io/client-go/listers/events/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/extensions/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/networking/v1:all-srcs",
        "//vendor/k8s.io/client-go/listers/networking/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/node/v1alpha1:all-srcs",
        "//vendor/k8s.io/client-go/listers/node/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/policy/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/rbac/v1:all-srcs",
        "//vendor/k8s.io/client-go/listers/rbac/v1alpha1:all-srcs",
        "//vendor/k8s.io/client-go/listers/rbac/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/scheduling/v1:all-srcs",
        "//vendor/k8s.io/client-go/listers/scheduling/v1alpha1:all-srcs",
        "//vendor/k8s.io/client-go/listers/scheduling/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/listers/settings/v1alpha1:all-srcs",
        "//vendor/k8s.io/client-go/listers/storage/v1:all-srcs",
        "//vendor/k8s.io/client-go/listers/storage/v1alpha1:all-srcs",
        "//vendor/k8s.io/client-go/listers/storage/v1beta1:all-srcs",
        "//vendor/k8s.io/client-go/pkg/apis/clientauthentication:all-srcs",
        "//vendor/k8s.io/client-go/pkg/version:all-srcs",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth:all-srcs",
        "//vendor/k8s.io/client-go/rest:all-srcs",
        "//vendor/k8s.io/client-go/restmapper:all-srcs",
        "//vendor/k8s.io/client-go/scale:all-srcs",
        "//vendor/k8s.io/client-go/testing:all-srcs",
        "//vendor/k8s.io/client-go/third_party/forked/golang/template:all-srcs",
        "//vendor/k8s.io/client-go/tools/auth:all-srcs",
        "//vendor/k8s.io/client-go/tools/cache:all-srcs",
        "//vendor/k8s.io/client-go/tools/clientcmd:all-srcs",
        "//vendor/k8s.io/client-go/tools/leaderelection:all-srcs",
        "//vendor/k8s.io/client-go/tools/metrics:all-srcs",
        "//vendor/k8s.io/client-go/tools/pager:all-srcs",
        "//vendor/k8s.io/client-go/tools/record:all-srcs",
        "//vendor/k8s.io/client-go/tools/reference:all-srcs",
        "//vendor/k8s.io/client-go/tools/remotecommand:all-srcs",
        "//vendor/k8s.io/client-go/transport:all-srcs",
        "//vendor/k8s.io/client-go/util/cert:all-srcs",
        "//vendor/k8s.io/client-go/util/connrotation:all-srcs",
        "//vendor/k8s.io/client-go/util/exec:all-srcs",
        "//vendor/k8s.io/client-go/util/flowcontrol:all-srcs",
        "//vendor/k8s.io/client-go/util/homedir:all-srcs",
        "//vendor/k8s.io/client-go/util/jsonpath:all-srcs",
        "//vendor/k8s.io/client-go/util/keyutil:all-srcs",
        "//vendor/k8s.io/client-go/util/retry:all-srcs",
        "//vendor/k8s.io/client-go/util/workqueue:all-srcs",
        "//vendor/k8s.io/cloud-provider:all-srcs",
        "//vendor/k8s.io/csi-translation-lib/plugins:all-srcs",
        "//vendor/k8s.io/helm/pkg/strvals:all-srcs",
        "//vendor/k8s.io/klog:all-srcs",
        "//vendor/k8s.io/kube-openapi/pkg/common:all-srcs",
        "//vendor/k8s.io/kube-openapi/pkg/util/proto:all-srcs",
        "//vendor/k8s.io/kubernetes/pkg/client/metrics/prometheus:all-srcs",
        "//vendor/k8s.io/kubernetes/pkg/kubectl:all-srcs",
        "//vendor/k8s.io/kubernetes/pkg/util/mount:all-srcs",
        "//vendor/k8s.io/kubernetes/pkg/volume/util/nsenter:all-srcs",
        "//vendor/k8s.io/legacy-cloud-providers/aws:all-srcs",
        "//vendor/k8s.io/legacy-cloud-providers/gce:all-srcs",
        "//vendor/k8s.io/utils/buffer:all-srcs",
        "//vendor/k8s.io/utils/exec:all-srcs",
        "//vendor/k8s.io/utils/integer:all-srcs",
        "//vendor/k8s.io/utils/io:all-srcs",
        "//vendor/k8s.io/utils/keymutex:all-srcs",
        "//vendor/k8s.io/utils/net:all-srcs",
        "//vendor/k8s.io/utils/nsenter:all-srcs",
        "//vendor/k8s.io/utils/path:all-srcs",
        "//vendor/k8s.io/utils/pointer:all-srcs",
        "//vendor/k8s.io/utils/trace:all-srcs",
        "//vendor/sigs.k8s.io/controller-runtime:all-srcs",
        "//vendor/sigs.k8s.io/controller-tools/cmd/controller-gen:all-srcs",
        "//vendor/sigs.k8s.io/controller-tools/pkg/crd:all-srcs",
        "//vendor/sigs.k8s.io/controller-tools/pkg/deepcopy:all-srcs",
        "//vendor/sigs.k8s.io/controller-tools/pkg/genall:all-srcs",
        "//vendor/sigs.k8s.io/controller-tools/pkg/loader:all-srcs",
        "//vendor/sigs.k8s.io/controller-tools/pkg/markers:all-srcs",
        "//vendor/sigs.k8s.io/controller-tools/pkg/rbac:all-srcs",
        "//vendor/sigs.k8s.io/controller-tools/pkg/schemapatcher:all-srcs",
        "//vendor/sigs.k8s.io/controller-tools/pkg/webhook:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/commands/build:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/constants:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/expansion:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/factory:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/fs:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/git:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/gvk:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/ifc:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/image:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/internal/error:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/loader:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/patch:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/resid:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/resmap:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/resource:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/target:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/transformers:all-srcs",
        "//vendor/sigs.k8s.io/kustomize/pkg/types:all-srcs",
        "//vendor/sigs.k8s.io/yaml:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
