package(default_visibility = ["//visibility:public"])

test_suite(
    name = "verify-all",
    tests = [
        #"verify-packages",
        "@io_k8s_repo_infra//hack:verify-bazel",
        "@io_k8s_repo_infra//hack:verify-boilerplate",
        "@io_k8s_repo_infra//hack:verify-gofmt",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//hack/machine_types:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
